Fixed margin and alignment

--- a/app/assets/stylesheets/application/repositories.sass
+++ b/app/assets/stylesheets/application/repositories.sass
@@ -1,6 +1,8 @@
 .repositories
   i.fa-check-square
     color: #d42b0f
+  .information
+    margin-top: 1em
   .button.sync
     font-size: 1em
     height: 100%
